修复移动端翻页标示偏下 | Fix positon of page indicator in mobile is too low

--- a/src/components/Control/Control.less
+++ b/src/components/Control/Control.less
@@ -182,6 +182,9 @@
         opacity: 0.8;
         transform: translate(-50%, 0);
     }
+    &.mobile {
+        bottom: 2.0rem;
+    }
 
     .dot {
         cursor: pointer;
